rejig of markup and fragment to accomodate the change email and join now button/form

--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -6,21 +6,13 @@
 @import play.twirl.api.Html
 @import model.Faq
 
-@signPostItem(btnText: String, btnSrc: String, description: Html) = {
+@signPostItem(btnText: String, btnSrc: String)(description: Html) = {
     <li class="signpost-item signpost-item--sign">
         <p class="signpost-item__description">@description</p>
         <div class="signpost__cta">
             <a class="action action--no-bottom-margin" href="@btnSrc">@btnText</a>
         </div>
     </li>
-}
-
-@signpost(opt1ButtonText: String, opt1ButtonSrc: String)(opt1Text: Html)(opt2ButtonText: String, opt2ButtonSrc: String)(opt2Text: Html) = {
-    <ul class="signpost u-unstyled">
-        @signPostItem(opt1ButtonText, opt1ButtonSrc, opt1Text)
-        <li class="signpost-item signpost-item--divider">or</li>
-        @signPostItem(opt2ButtonText, opt2ButtonSrc, opt2Text)
-    </ul>
 }
 
 @main("Staff Membership", containerPadding=false) {
@@ -49,11 +41,15 @@
                             your work email address ending @@theguardian.com (@@guardian.co.uk will work too).
                         </p>
 
-                        @signpost("Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)) {
-                            Set up a <strong>new</strong> Guardian Identity account
-                        }("Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)) {
-                            Use an <strong>existing</strong> Guardian Identity account
-                        }
+                        <ul class="signpost u-unstyled">
+                            @signPostItem("Create account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)){
+                                Set up a <strong>new</strong> Guardian Identity account
+                            }
+                            <li class="signpost-item signpost-item--divider">or</li>
+                            @signPostItem("Sign in", Config.idWebAppSigninUrl(routes.Joiner.staff.url)){
+                                Use an <strong>existing</strong> Guardian Identity account
+                            }
+                        </ul>
                     } { identityEmail =>
                         <div class="u-cf">
                             @for(srcUrl <- avatarUrl){
@@ -70,22 +66,27 @@
                         @if(staffEmail.emailsMatch) {
                             <a class="action action--no-bottom-margin" href="@routes.Joiner.enterStaffDetails">Join</a>
                         } else {
-                                <form action="@routes.Joiner.updateEmailStaff" method="POST" id="staff-email-form">
-                                    @CSRF.formField
-                                    @fragments.form.submit("Change email and Join now FORM")
-                                </form>
-
-                                <p>
+                            <p>
                                 Currently your account is set up with <strong>@identityEmail</strong>. To join Guardian
                                 Staff Membership you must have a Guardian Identity account set up using your work email
                                 address ending @@theguardian.com (@@guardian.co.uk will work too).
                             </p>
 
-                            @signpost("Change email and join", Config.idWebAppAccountEditUrl(routes.Joiner.staff.url)) {
-                                Change email address to <strong> @staffEmail.googleEmail </strong> Guardian Identity account
-                            }("Create new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)) {
-                                Set up a <strong>new</strong> Guardian Identity account
-                            }
+                            <ul class="signpost u-unstyled">
+                                <li class="signpost-item signpost-item--sign">
+                                    <p class="signpost-item__description">Change email address to <strong> @staffEmail.googleEmail </strong> Guardian Identity account</p>
+                                    <div class="signpost__cta">
+                                        <form action="@routes.Joiner.updateEmailStaff" method="POST">
+                                            @CSRF.formField
+                                            <button class="action action--no-bottom-margin" type="submit">Change email and Join now</button>
+                                        </form>
+                                    </div>
+                                </li>
+                                <li class="signpost-item signpost-item--divider">or</li>
+                                @signPostItem("Create new account", Config.idWebAppRegisterUrl(routes.Joiner.staff.url)){
+                                    Set up a <strong>new</strong> Guardian Identity account
+                                }
+                            </ul>
                         }
                     }
                 </div>
