adjustments to action styles for when a button and anchor are sat side by side

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -13,6 +13,8 @@
     max-width: rem($gs-gutter * 15);
     padding: rem(8px) rem(8px) rem(8px) rem(18px);
     @include border-radius(50%);
+    -webkit-font-smoothing: antialiased;
+    vertical-align: bottom;
 
     &:visited,
     &:hover,
