--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -6,7 +6,7 @@
         <div class="page-section__row">
             <div class="page-section__primary"></div>
             <div class="page-section__secondary">
-                <h1 class="page-headline">Unfortunately, you're not authorised to do that</h1>
+                <h1 class="page-headline">Unfortunately, you do not have permission</h1>
                 <p class="page-intro">
                     You're signed in as <strong>@staffEmail</strong>.
                 </p>
