signpost component work is missing from the main style sheet

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -77,6 +77,7 @@
 @import 'components/user';
 @import 'components/social';
 @import 'components/patterns';
+@import 'components/signpost';
 
 /* ==========================================================================
    Membership pages
