added flash message styles in

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -78,6 +78,7 @@
 @import 'components/social';
 @import 'components/patterns';
 @import 'components/signpost';
+@import 'components/flash-message';
 
 /* ==========================================================================
    Membership pages
