Add icon--large modifier rather than icon-large-name convention

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -188,7 +188,7 @@
                             <div class="event-content__item event-content__name" itemprop="name">@event.name.text</div>
                             <div class="event-content__item event-content__time event-content--line-divider u-cf">
                                 <div class="event-content__first">
-                                    <i class="icon-large-early_booking icon--info"></i>
+                                    <i class="icon-early_booking icon--info"></i>
                                 </div>
                                 <div class="event-content__second" itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</div>
                             </div>
