--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -20,7 +20,7 @@
                 </h2>
 
                 <div class="event-item__detail">
-                    <i class="icon-early_booking-grey event-item__icon"></i>
+                    <i class="icon-early_booking event-item__icon"></i>
                     <time datetime="@event.start">@prettyDateWithTimeAndDayName(event.start)</time>
                 </div>
 
