--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -37,7 +37,7 @@
 
                     <div class="event-item__time event-content--line-divider u-cf">
                         <div class="event-content__first">
-                            <i class="icon-large-early_booking icon--benefits"></i>
+                            <i class="icon-early_booking icon--benefits"></i>
                         </div>
                         <div class="event-content__second" itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</div>
                     </div>
