Add new benefits styles

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
         </div>
-        <section class="content__container right-align">
+        <section class="content__container u-align-right">
             <a href="@Config.idWebAppUrl/membership/edit" class="action action-cta action-cta--confirm">My Profile</a>
         </section>
     </main>
