--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -25,7 +25,7 @@
 
         <p>Your Guardian profile will remain active so you can continue to participate in the Guardian community</p>
 
-        <div class="content__container right-align">
+        <div class="content__container u-alignt-right">
             <a href="@Config.idWebAppUrl/membership/edit" class="action action-cta action-cta--confirm">My Profile</a>
         </div>
 
