--- a/frontend/assets/stylesheets/components/_benefits.scss
+++ b/frontend/assets/stylesheets/components/_benefits.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   Benefits
+   ========================================================================== */
+
 .benefits-item {
     @include mq(tablet) {
         width: 33.3%;
@@ -96,7 +100,7 @@
 
     @include mq(mobileLandscape) {
         width: 50% - $gutter-width-fluid; // 50% - gutter width from .benefit
-        margin-left: $gutter-width-fluid; // gutter width, matches offset on .tier-benefits__list
+        margin-left: $gutter-width-fluid; // gutter width, matches offset on .tier-benefits
         float: left;
 
         .flexbox & {
@@ -131,4 +135,81 @@
 .benefit-copy {
     @include fs-textSans(3);
     padding: 0 0 rem($gs-baseline) rem($gs-gutter * 2);
+}
+
+/* ==========================================================================
+   Benefits - Benefits Features
+   ========================================================================== */
+
+.feature-benefitslist {
+    @include clearfix;
+}
+    .feature-benefits__item {
+
+    }
+
+.benefit--feature {
+    @include fs-bodyHeading(3);
+    display: block;
+}
+
+
+.benefits-container {
+
+    .benefits__list {
+        margin: rem($gs-gutter);
+
+        @include mq(tablet) {
+            width: rem(gs-span(9));
+            margin: rem(80px) rem($gs-gutter) 0 rem(gs-span(1));
+            padding-bottom: rem($gs-gutter + 10);
+        }
+
+        @include mq(desktop) {
+            width: rem(gs-span(11));
+            margin: rem(80px) rem($gs-gutter) 0;
+        }
+
+        @include mq(mem-full) {
+            width: rem(gs-span(12));
+            margin: rem(80px) rem($gs-gutter) 0 rem(gs-span(2) + $gs-gutter * 2);
+        }
+    }
+
+    .benefits__list--items {
+        float: left;
+        @include fs-bodyCopy(1);
+        width: rem(gs-span(4));
+        height: rem(130px);
+
+        &:nth-child(4),
+        &:nth-child(8) {
+            border-right: 0;
+        }
+
+        @include mq(tablet) {
+            @include fs-bodyCopy(2);
+            width: rem(gs-span(3));
+            padding: 0 rem($gs-gutter / 2);
+            height: rem(220px);
+        }
+
+        @include mq(desktop) {
+            border-right: rem(1px) solid $c-neutral3;
+            width: rem(gs-span(3) - 10);
+            height: rem(220px);
+            margin-bottom: rem(50px);
+        }
+
+        @include mq(mem-full) {
+            width: rem(gs-span(3));
+            height: rem(190px);
+        }
+    }
+
+    .benefits__list--header {
+        @include fs-bodyHeading(3);
+        display: block;
+    }
+
 }
