--- a/frontend/app/views/fragments/benefits/priceInfo.scala.html
+++ b/frontend/app/views/fragments/benefits/priceInfo.scala.html
@@ -1,22 +1,28 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier)
+@(tier: com.gu.membership.salesforce.Tier.Tier, isReversed: Boolean = false)
 
 @import model.Benefits
 
 @defining(Benefits.details(tier)) { benefits =>
-    <div class="price-info price-info--@tier.toString.toLowerCase">
+    <div class="price-info @if(isReversed){price-info--reversed}">
     @benefits.pricing.fold {
-        <div class="price-info__container-inner price-info__container-inner--full-width">
-            <div class="price-info__detail price-info__detail--right">Free</div>
+        <div class="price-info__item">
+            <div class="price-info__detail">
+                <span class="price-info__value">Free</span>
+            </div>
         </div>
     } { pricing =>
-        <div class="price-info__container-inner">
-            <div class="price-info__detail"><strong>£@pricing.yearly</strong><span class="price-info__detail--sm-date">
-                /year</span></div>
-            <div class="price-info__sub-detail">Save £@pricing.yearlySaving/year</div>
+        <div class="price-info__item price-info__item--split">
+            <div class="price-info__detail">
+                <strong class="price-info__value">£@pricing.yearly</strong>
+                <span class="price-info__date">/year</span>
+            </div>
+            <div class="price-info__saving">Save £@pricing.yearlySaving/year</div>
         </div>
-        <div class="price-info__container-inner price-info__container-inner--last">
-            <div class="price-info__detail price-info__detail--right"><strong>
-                £@pricing.monthly</strong><span class="price-info__detail--sm-date">/month</span></div>
+        <div class="price-info__item price-info__item--split price-info__item--last">
+            <div class="price-info__detail price-info__detail--right">
+                <strong class="price-info__value">£@pricing.monthly</strong>
+                <span class="price-info__date">/month</span>
+            </div>
         </div>
     }
     </div>
