Document page and benefits component

--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="page-slide home-slice home-slice--join-today">
+    <div class="page-slice home-slice home-slice--join-today">
         <div class="page-slice__inner home-slice__inner u-cf">
             <h2 class="page-slice__headline">Join Guardian Membership today</h2>
             <div class="page-slice-content join-today__join-boxes package-list package-list--flex-box package-list--bordered">
