--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -55,7 +55,7 @@
                     }
                 </ul>
 
-                <button class="js-toggle action action--plus-left" data-toggle="js-toggle-past-events">More past events</button>
+                <button class="js-toggle action action--toggle" data-toggle="js-toggle-past-events" data-toggle-label="Less">More past events</button>
 
             </div>
         </div>
