--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -60,27 +60,23 @@
 }
 
 
-.action--plus-left {
+.action--toggle {
     &:before {
         @extend .icon-plus;
         content: '';
         float: left;
         margin: rem(2px) rem(18px) 0 0;
     }
-    &:after {
-        display: none;
-    }
-}
 
-.action--minus-left {
-    &:before {
-        @extend .icon-minus;
-        content: '';
-        float: left;
-        margin: rem(2px) rem(18px) 0 0;
-    }
     &:after {
         display: none;
+    }
+
+    &.is-toggled,
+    .action--toggle--toggled {
+        &:before {
+            @extend .icon-minus;
+        }
     }
 }
 
