--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -23,9 +23,21 @@
         <div class="page-slice__inner">
             <h2 class="page-slice__headline">What's included</h2>
             <div class="page-slice-content">
-                @fragments.benefits.feature(tier=Tier.Friend, subtitle="Benefits")
-                @fragments.benefits.feature(tier=Tier.Partner, subtitle="Friend benefits+")
-                @fragments.benefits.feature(tier=Tier.Patron, subtitle="Partner benefits+")
+                @fragments.tier.feature(tier=Tier.Friend, subtitle="Benefits") {
+                    <a class="action js-opt-become-member" href="/join/friend/enter-details">
+                        Become a Friend
+                    </a>
+                }
+                @fragments.tier.feature(tier=Tier.Partner, subtitle="Friend benefits+") {
+                    <a class="action js-opt-become-member" href="/join/partner/enter-details">
+                        Become a Partner
+                    </a>
+                }
+                @fragments.tier.feature(tier=Tier.Patron, subtitle="Partner benefits+") {
+                    <a class="action js-opt-become-member" href="/join/patron/enter-details">
+                        Become a Patron
+                    </a>
+                }
             </div>
         </div>
     </div>
