Import new pricing component

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -15,7 +15,6 @@
 @import 'base/normalize';
 @import 'base/base';
 @import 'base/type';
-
 @import 'base/links';
 @import 'base/helpers';
 @import 'base/lists';
@@ -78,6 +77,7 @@
 @import 'components/benefits';
 @import 'components/user';
 @import 'components/social';
+@import 'components/pricing';
 @import 'components/patterns';
 @import 'components/signpost';
 @import 'components/flash-message';
