--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -70,6 +70,7 @@
    Membership components
    ========================================================================== */
 
+@import 'components/grid';
 @import 'components/content';
 @import 'components/action';
 @import 'components/page';
