Anchor link to videos

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -141,7 +141,7 @@
                 </div>
                 @event match {
                     case _: GuLiveEvent => {
-                        <a class="action action--external action--buy-event-ticket-details" href="@Config.guardianMembershipUrl">Watch highlights of past events</a>
+                        <a class="action action--external action--buy-event-ticket-details" href="@Config.guardianMembershipUrl#video">Watch highlights of past events</a>
                     }
                     case _ => {}
                 }
